; ModuleID = '/home/carl/AnghaBench/git/extr_submodule-config.c_parse_fetch_recurse.c'
source_filename = "/home/carl/AnghaBench/git/extr_submodule-config.c_parse_fetch_recurse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RECURSE_SUBMODULES_ON = common dso_local global i32 0, align 4
@RECURSE_SUBMODULES_OFF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"on-demand\00", align 1
@RECURSE_SUBMODULES_ON_DEMAND = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"bad %s argument: %s\00", align 1
@RECURSE_SUBMODULES_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32)* @parse_fetch_recurse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_fetch_recurse(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i8*, i8** %6, align 8
  %9 = call i32 @git_parse_maybe_bool(i8* %8)
  switch i32 %9, label %14 [
    i32 1, label %10
    i32 0, label %12
  ]

10:                                               ; preds = %3
  %11 = load i32, i32* @RECURSE_SUBMODULES_ON, align 4
  store i32 %11, i32* %4, align 4
  br label %30

12:                                               ; preds = %3
  %13 = load i32, i32* @RECURSE_SUBMODULES_OFF, align 4
  store i32 %13, i32* %4, align 4
  br label %30

14:                                               ; preds = %3
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @strcmp(i8* %15, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %14
  %19 = load i32, i32* @RECURSE_SUBMODULES_ON_DEMAND, align 4
  store i32 %19, i32* %4, align 4
  br label %30

20:                                               ; preds = %14
  %21 = load i32, i32* %7, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %20
  %24 = load i8*, i8** %5, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = call i32 @die(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i8* %24, i8* %25)
  br label %29

27:                                               ; preds = %20
  %28 = load i32, i32* @RECURSE_SUBMODULES_ERROR, align 4
  store i32 %28, i32* %4, align 4
  br label %30

29:                                               ; preds = %23
  br label %30

30:                                               ; preds = %10, %12, %18, %27, %29
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @git_parse_maybe_bool(i8*) #1

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @die(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
